force-app/main/default/objects/Country_Share_Grant__mdt/Country_Share_Grant__mdt.object-meta.xml
<CustomObject>
    <description>Declarative access matrix for the CountrySharing Apex engine. Each record = one grant: object + scope (Country-matched or All) + access level + the personas (functional role developer names) that receive it via auto-provisioned public groups. Replaces per-country criteria sharing rules.</description>
    <label>Country Share Grant</label>
    <pluralLabel>Country Share Grants</pluralLabel>
</CustomObject>