force-app/main/default/objects/Country_Share_Grant__mdt/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <description>Access level written to the share row. Edit wins when two grants resolve to the same group for the same record.</description>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
                <default>true</default>
                <label>Read</label>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>