force-app/main/default/objects/Country_Share_Grant__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to disable this grant without deleting it. Existing shares are removed on the next recalculation/record touch.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>