force-app/main/default/objects/Country_Share_Grant__mdt/fields/Country_Field__c.field-meta.xml
<CustomField>
    <fullName>Country_Field__c</fullName>
    <description>API name of the country field on the target object (e.g. Operation_Country__c, BillingCountry__c). Required for Scope = Country; ignored for Scope = All.</description>
    <label>Country Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>