force-app/main/default/objects/Country_Share_Grant__mdt/fields/Group_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Group_Suffix__c</fullName>
    <description>Suffix of the public group receiving this grant. Scope=Country resolves to DE_{Country}_{Suffix}; Scope=All resolves to DE_All_{Suffix}. Groups are auto-provisioned by the engine.</description>
    <label>Group Suffix</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>