force-app/main/default/objects/Country_Share_Grant__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the object this grant applies to (e.g. Opportunity, BillingAccount__c).</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>