force-app/main/default/objects/Country_Share_Grant__mdt/fields/Personas__c.field-meta.xml
<CustomField>
    <fullName>Personas__c</fullName>
    <description>Semicolon-separated UserRole DeveloperNames whose users belong in this grant&apos;s group (e.g. Country_Finance;Country_Manager). Used by group-membership sync, not by record-side share writing.</description>
    <label>Personas</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>