force-app/main/default/objects/Country_Share_Grant__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Country = share records to the per-country group matching the record&apos;s country field. All = share every record to a single global group (cross-country visibility).</description>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
                <default>true</default>
                <label>Country</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>